fix: tab spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1829,7 +1829,7 @@ h5,
 }
 
 .comm {
-    width: 80%;
+    width: fit-content;
     -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.66);
     -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.66);
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.66);
@@ -2150,8 +2150,13 @@ tr .td-type {
 
 @media (max-width: 691.98px) {
     .comm {
-        padding: 10px;
+        padding: 30px;
         margin: auto;
+        width: 100%;
         margin-bottom: 50px;
     }
+}
+
+.tab p {
+    padding-left: 50px;
 }
